# huffman_2

./: CMakeLists.txt  binary_reader.cpp  huffman-tool.cpp  huffman.cpp  huffman_tree.cpp
.github/workflows/: cpp.yml
huffman_lib/: binary_reader.cpp  binary_writer.cpp  bstream.cpp  bstream.h  buffered.cpp  buffered.h  counter.cpp  huffman.cpp  huffman.h  huffman_code.cpp  huffman_code.h  huffman_tree.cpp  huffman_tree.h
huffman_lib/huffman_codes_examples/: ct_string.cpp  ct_vector_bool.cpp  ct_vector_int.cpp
huffman_lib/include/: binary_reader.h  binary_writer.h  consts.h  counter.h  huffman.h  huffman_tree.h
integration-tests/: huffman-tool.cpp  tests.py
integration-tests/data/: random_bytes
unit-tests/: tests.cpp
unit-tests/files/: bad_tree  big_tree  bigfile  cpp_tutorial  full_abacaba  i_said_everything_i_wanted  java_tutorial  no_rem  short_tree  simple  some_program  test_elf_N26huffman_code_type_examples9ct_stringE.huf
